# WorkArena

./: .gitignore  .python-version  CITATION.cff  CODE_OF_CONDUCT.md  README.md  SECURITY.md  analyze_failed_dashboards.ipynb  dcat-metadata.jsonld  generate_knowledge_base.ipynb  index.html  make_human_eval_curriculum.py  manifest.json  monitor_output.md  monitor_pool_usage.py  pyproject.toml  requirements.txt  run_atomic_task_matrix.py  test_fetch_instances.py  test_pool.json  workarena_test.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: instance_pool_ci.yml  monitor-pool-usage.yml  pool-telemetry.yml  pypi.yml  unit_tests.yml
TEST_10/: failed_AllMenuTask.json  failed_CreateChangeRequestTask.json  failed_CreateHardwareAssetTask.json  failed_CreateIncidentTask.json  failed_CreateProblemTask.json  failed_CreateUserTask.json  failed_FilterAssetListTask.json  failed_FilterChangeRequestListTask.json  failed_FilterHardwareListTask.json  failed_FilterIncidentListTask.json  failed_FilterServiceCatalogItemListTask.json  failed_FilterUserListTask.json  failed_ImpersonationTask.json  failed_KnowledgeBaseSearchTask.json  failed_OrderAppleMacBookPro15Task.json  failed_OrderAppleWatchTask.json  failed_OrderDevelopmentLaptopPCTask.json  failed_OrderIpadMiniTask.json  failed_OrderIpadProTask.json  failed_OrderLoanerLaptopTask.json  failed_SortAssetListTask.json  failed_SortServiceCatalogItemListTask.json  failed_SortUserListTask.json  failed_reasons_index.json
dev/: environment.yaml  requirements.txt
scripts/: extract_finetuning_traces.py  generate_knowledge_base.ipynb  make_human_eval_curriculum.py
src/: __init__.py  wa_action_traces.py  workarena_test.py
tests/: Untitled-1.ipynb  test_api.py  test_compositional.py  test_compositional_utils.py  test_filter_list_task.py  test_random_config_generation.py  test_snow_instance.py  test_task_from_config.py  test_task_general.py  test_task_setup.py  test_utils.py  test_validate.py  test_workarena_utils.py  test_yoko.py
wandb/: latest-run
wandb/run-20251207_225935-pool-usage/: run-pool-usage.wandb
wandb/run-20251207_230501-pool-usage/: run-pool-usage.wandb
wandb/run-20251207_230915-pool-usage-1/: run-pool-usage-1.wandb
wandb/run-20251207_231120-pool-usage-2/: run-pool-usage-2.wandb
wandb/run-20251207_231255-pool-usage-2-total/: run-pool-usage-2-total.wandb
wandb/run-20251207_231257-pool-usage-2-workarenapublic2/: run-pool-usage-2-workarenapublic2.wandb
wandb/run-20251207_231259-pool-usage-2-workarenapublic4/: run-pool-usage-2-workarenapublic4.wandb
wandb/run-20251207_231300-pool-usage-2-workarenapublic5/: run-pool-usage-2-workarenapublic5.wandb
wandb/run-20251207_231302-pool-usage-2-workarenapublic6/: run-pool-usage-2-workarenapublic6.wandb
wandb/run-20251207_231303-pool-usage-2-workarenapublic7/: run-pool-usage-2-workarenapublic7.wandb
(+430 files in other folders)
